--- a/index.html
+++ b/index.html
@@ -557,8 +557,21 @@
 
 
         // --- FIREBASE SETUP ---
-        const firebaseConfig = JSON.parse(__firebase_config);
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyDDQlIeeWw19Eo6qnszCyrXyG4Bc35BLhk",
+          authDomain: "bookscoutpro.firebaseapp.com",
+          projectId: "bookscoutpro",
+          storageBucket: "bookscoutpro.firebasestorage.app",
+          messagingSenderId: "124845335540",
+          appId: "1:124845335540:web:79e3e82a919cf0890ccfa1",
+          measurementId: "G-C1HH2R0RBB"
+        };
+        
+        // Initialize Firebase
         const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
         const auth = getAuth(app);
         const db = getFirestore(app);
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
