--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
         import { getAuth, signInAnonymously, onAuthStateChanged, signInWithCustomToken } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
 
         // --- GEMINI API ---
-        const apiKey = ""; // Provided by env
+        const apiKey = "AIzaSyBgCLwVJHm3GHSVopl4js0tCeRN0SuAig0"; // Provided by env
 
         async function callGemini(prompt) {
             try {
