--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         const geminiApiKey = "AIzaSyDQWJzCNs3nhLll9iEwj3P5zEeeFruooQ4"; // For system prompt only, user key used for Vision
         
         // Function to manage Google API Key securely in local storage
-        let googleUserApiKey = localStorage.getItem('google_vision_key') || "";
+        let googleUserApiKey = localStorage.getItem('google_vision_key') || "AIzaSyBgCLwVJHm3GHSVopl4js0tCeRN0SuAig0";
 
         window.resetApiKey = () => {
             if(confirm("Vuoi cambiare la tua API Key di Google?")) {
