--- a/index.html
+++ b/index.html
@@ -487,34 +487,35 @@
         import { getAuth, signInAnonymously, onAuthStateChanged, signInWithCustomToken, setPersistence, browserLocalPersistence } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
 
         // --- GOOGLE API & GEMINI ---
-        const geminiApiKey = "AIzaSyDQWJzCNs3nhLll9iEwj3P5zEeeFruooQ4"; // For system prompt only, user key used for Vision
-        
-        // Function to manage Google API Key securely in local storage
-        let googleUserApiKey = localStorage.getItem('google_vision_key') || "AIzaSyBgCLwVJHm3GHSVopl4js0tCeRN0SuAig0";
+        // Rimosso hardcoding per sicurezza. La chiave viene salvata nel browser dell'utente.
+        let googleUserApiKey = localStorage.getItem('bookscout_api_key') || "";
 
         window.resetApiKey = () => {
-            if(confirm("Vuoi cambiare la tua API Key di Google?")) {
-                localStorage.removeItem('google_vision_key');
+            if(confirm("Vuoi cambiare la tua Google API Key?")) {
+                localStorage.removeItem('bookscout_api_key');
                 googleUserApiKey = "";
-                alert("Key rimossa. Ti verrà richiesta al prossimo utilizzo della fotocamera.");
+                alert("Key rimossa. Ti verrà richiesta al prossimo utilizzo delle funzioni IA.");
             }
         };
 
         const getGoogleKey = () => {
             if (googleUserApiKey) return googleUserApiKey;
-            const key = prompt("Inserisci la tua Google API Key per usare il riconoscimento immagini (Vision API):");
-            if (key) {
-                googleUserApiKey = key;
-                localStorage.setItem('google_vision_key', key);
-                return key;
+            const key = prompt("Inserisci la tua Google API Key (con abilitate Vision API e Gemini API):");
+            if (key && key.trim() !== "") {
+                googleUserApiKey = key.trim();
+                localStorage.setItem('bookscout_api_key', googleUserApiKey);
+                return googleUserApiKey;
             }
+            alert("API Key necessaria per questa funzione.");
             return null;
         };
 
         async function callGemini(prompt) {
+            const userKey = getGoogleKey();
+            if (!userKey) return; 
+
             try {
-                // Using standard env key for text gen if available, else could fall back to user key if enabled
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${geminiApiKey}`, {
+                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${userKey}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
@@ -594,6 +595,9 @@
             field.value = result.trim();
             btn.innerHTML = originalText;
         };
+
+
+        // --- FIREBASE SETUP ---
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
