--- a/index.html
+++ b/index.html
@@ -515,7 +515,8 @@
             if (!userKey) return; 
 
             try {
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${userKey}`, {
+                // Modified: Using public stable model 'gemini-1.5-flash' instead of internal/preview
+                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${userKey}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
@@ -523,11 +524,18 @@
                     })
                 });
                 
-                if (!response.ok) throw new Error('API Error');
+                if (!response.ok) {
+                    if (response.status === 403) {
+                        throw new Error("Errore 403: API Key non valida o servizio 'Generative Language API' non abilitato nella Google Cloud Console.");
+                    }
+                    throw new Error(`API Error: ${response.status}`);
+                }
+                
                 const data = await response.json();
                 return data.candidates?.[0]?.content?.parts?.[0]?.text || "Errore nella generazione.";
             } catch (error) {
                 console.error("Gemini Error:", error);
+                alert(error.message); // Show specific error to user
                 return "Servizio momentaneamente non disponibile.";
             }
         }
