--- a/index.html
+++ b/index.html
@@ -36,9 +36,14 @@
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
+            /* Use dynamic viewport height for mobile browsers */
             height: 100vh;
+            height: 100dvh;
             overflow: hidden;
-            /* Safe area per iPhone X e successivi */
+        }
+
+        .app-container {
+            /* Safe area handling inside the container */
             padding-top: env(safe-area-inset-top);
             padding-bottom: env(safe-area-inset-bottom);
         }
@@ -117,10 +122,11 @@
 
     <div class="absolute inset-0 bg-black/40 z-0"></div>
 
-    <div class="relative z-10 h-full flex flex-col max-w-md mx-auto bg-white/10 shadow-2xl overflow-hidden sm:border-x sm:border-white/20">
+    <!-- App Container: widened to max-w-lg for better view, added app-container class for safe areas -->
+    <div class="app-container relative z-10 h-full flex flex-col max-w-lg mx-auto bg-white/10 shadow-2xl overflow-hidden sm:border-x sm:border-white/20 transition-all duration-300">
         
         <!-- Header -->
-        <header class="glass-dark p-4 flex justify-between items-center shadow-lg shrink-0 pt-safe-top">
+        <header class="glass-dark p-4 flex justify-between items-center shadow-lg shrink-0">
             <div class="flex items-center gap-2">
                 <i class="fa-solid fa-book-open-reader text-emerald-400 text-xl"></i>
                 <h1 class="font-bold text-lg tracking-wide">BookScout Cloud</h1>
@@ -138,7 +144,7 @@
         <!-- Menu Laterale -->
         <div id="side-menu" class="absolute inset-0 z-50 transform translate-x-full transition-transform duration-300 ease-in-out">
             <div class="absolute inset-0 bg-black/60 backdrop-blur-sm" onclick="toggleMenu()"></div>
-            <div class="absolute right-0 top-0 bottom-0 w-64 glass-dark shadow-xl flex flex-col p-6 pt-safe-top">
+            <div class="absolute right-0 top-0 bottom-0 w-64 glass-dark shadow-xl flex flex-col p-6 pt-20">
                 <div class="flex justify-between items-center mb-8">
                     <span class="font-bold text-xl text-emerald-400">Menu</span>
                     <button onclick="toggleMenu()" class="text-gray-400 hover:text-white"><i class="fa-solid fa-xmark text-2xl"></i></button>
@@ -529,7 +535,7 @@
 
             try {
                 // Modified: Using public stable model 'gemini-1.5-flash' instead of internal/preview
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${userKey}`, {
+                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${userKey}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
@@ -623,19 +629,10 @@
             }
             btn.innerHTML = originalText;
         };
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-          apiKey: "AIzaSyDDQlIeeWw19Eo6qnszCyrXyG4Bc35BLhk",
-          authDomain: "bookscoutpro.firebaseapp.com",
-          projectId: "bookscoutpro",
-          storageBucket: "bookscoutpro.firebasestorage.app",
-          messagingSenderId: "124845335540",
-          appId: "1:124845335540:web:79e3e82a919cf0890ccfa1",
-          measurementId: "G-C1HH2R0RBB"
-        };
-        
-        // Initialize Firebase
+
+
+        // --- FIREBASE SETUP ---
+        const firebaseConfig = JSON.parse(__firebase_config);
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getFirestore(app);
@@ -1283,4 +1280,4 @@
 
     </script>
 </body>
-                                    </html>
+</html>
