--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 
             try {
                 // Modified: Using public stable model 'gemini-1.5-flash' instead of internal/preview
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${userKey}`, {
+                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${userKey}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
@@ -631,8 +631,19 @@
         };
 
 
-        // --- FIREBASE SETUP ---
-        const firebaseConfig = JSON.parse(__firebase_config);
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyDDQlIeeWw19Eo6qnszCyrXyG4Bc35BLhk",
+          authDomain: "bookscoutpro.firebaseapp.com",
+          projectId: "bookscoutpro",
+          storageBucket: "bookscoutpro.firebasestorage.app",
+          messagingSenderId: "124845335540",
+          appId: "1:124845335540:web:79e3e82a919cf0890ccfa1",
+          measurementId: "G-C1HH2R0RBB"
+        };
+        
+        // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getFirestore(app);
