--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 
     <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
         body {
             font-family: 'Inter', sans-serif;
             background-image: url('https://images.unsplash.com/photo-1507842217343-583bb7260b66?q=80&w=2670&auto=format&fit=crop');
@@ -37,9 +42,7 @@
             background-position: center;
             background-attachment: fixed;
             /* Use dynamic viewport height for mobile browsers */
-            height: 100vh;
             height: 100dvh;
-            overflow: hidden;
         }
 
         .app-container {
@@ -122,8 +125,8 @@
 
     <div class="absolute inset-0 bg-black/40 z-0"></div>
 
-    <!-- App Container: widened to max-w-lg for better view, added app-container class for safe areas -->
-    <div class="app-container relative z-10 h-full flex flex-col max-w-lg mx-auto bg-white/10 shadow-2xl overflow-hidden sm:border-x sm:border-white/20 transition-all duration-300">
+    <!-- App Container: w-full for mobile, md:max-w-md for desktop to simulate app feel -->
+    <div class="app-container relative z-10 w-full h-full flex flex-col md:max-w-md mx-auto bg-white/10 shadow-2xl overflow-hidden md:border-x md:border-white/20 transition-all duration-300">
         
         <!-- Header -->
         <header class="glass-dark p-4 flex justify-between items-center shadow-lg shrink-0">
@@ -421,7 +424,7 @@
 
         <!-- Add/Edit Modal (With Gemini) -->
         <div id="modal-inventory" class="hidden absolute inset-0 z-50 flex items-end sm:items-center justify-center bg-black/70 backdrop-blur-sm fade-in">
-            <div class="bg-white w-full max-w-sm p-6 rounded-t-2xl sm:rounded-2xl shadow-2xl animate-slide-up flex flex-col max-h-[90vh]">
+            <div class="bg-white w-[90%] md:max-w-sm p-6 rounded-2xl shadow-2xl animate-slide-up flex flex-col max-h-[90vh]">
                 <div class="flex justify-between items-center mb-4 shrink-0">
                     <h3 class="font-bold text-lg text-gray-800" id="modal-title">Logistica Magazzino</h3>
                     <button onclick="closeInventoryModal()" class="text-gray-400 hover:text-red-500"><i class="fa-solid fa-xmark text-xl"></i></button>
@@ -487,7 +490,7 @@
 
         <!-- Search Results Selection Modal -->
         <div id="modal-search-results" class="hidden absolute inset-0 z-50 flex items-center justify-center bg-black/80 backdrop-blur-sm fade-in">
-            <div class="bg-white w-full max-w-sm p-4 rounded-2xl shadow-2xl flex flex-col max-h-[80vh]">
+            <div class="bg-white w-[90%] md:max-w-sm p-4 rounded-2xl shadow-2xl flex flex-col max-h-[80vh]">
                 <div class="flex justify-between items-center mb-4 shrink-0">
                     <h3 class="font-bold text-lg text-gray-800">Seleziona Libro</h3>
                     <button onclick="closeSearchModal()" class="text-gray-400 hover:text-red-500"><i class="fa-solid fa-xmark text-xl"></i></button>
@@ -535,7 +538,7 @@
 
             try {
                 // Modified: Using public stable model 'gemini-1.5-flash' instead of internal/preview
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${userKey}`, {
+                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${userKey}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
@@ -631,19 +634,8 @@
         };
 
 
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-          apiKey: "AIzaSyDDQlIeeWw19Eo6qnszCyrXyG4Bc35BLhk",
-          authDomain: "bookscoutpro.firebaseapp.com",
-          projectId: "bookscoutpro",
-          storageBucket: "bookscoutpro.firebasestorage.app",
-          messagingSenderId: "124845335540",
-          appId: "1:124845335540:web:79e3e82a919cf0890ccfa1",
-          measurementId: "G-C1HH2R0RBB"
-        };
-        
-        // Initialize Firebase
+        // --- FIREBASE SETUP ---
+        const firebaseConfig = JSON.parse(__firebase_config);
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getFirestore(app);
